--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -10,7 +10,7 @@ Les **Layouts** (ou "mise-en-pages" en français) sont des [composants Astro](/f
 
 Par convention, nous utilisons le terme "mise en page" pour les composants Astro qui fournissent des éléments d'interface utilisateur commun à toutes les pages, tels que les en-têtes, les barres de navigation et les pieds de page. Un composant de layout typique d'Astro fournit [aux pages Astro, Markdown ou MDX](/fr/core-concept/astro-pages/) les éléments suivants :
 - une **page shell** (`<html>`, `<head>` et `<body>` tags)
-- un [**`<slot />`**](/fr/core-concepts/astro-components/#slots) pour spécifier où le contenu de chaque page doit être injecté.
+- un [**`<slot />`**](/fr/core-concepts/astro-components/#les-emplacements-slots) pour spécifier où le contenu de chaque page doit être injecté.
 
 Mais, un composant de mise en page n'a rien de spécial ! Ils peuvent [accepter des propriétés](fr/core-concepts/astro-components/#propriétés-de-composants) et [importer et utiliser d'autres composants](/fr/core-concepts/astro-components/#vue-densemble-des-composants) comme n'importe quel autre composant Astro. Ils peuvent inclure [des composants de frameworks d'interface utilisateur](/fr/core-concepts/framework-components/) et [des scripts côté client](/fr/core-concepts/astro-components/#scripts-côté-client). Ils ne doivent même pas fournir une page shell complète, et peuvent plutôt être utilisés comme des modèles d'interface utilisateur partielle.
 
