--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -68,7 +68,7 @@ Astro fournit une propriété spéciale `layout` frontmatter pour spécifier le 
 
 Les composants de mise en page ne nécessitent pas de contenir une page HTML complète. Vous pouvez découper vos mises en page en composants plus petits, et ensuite réutiliser ces composants pour créer des mises en page plus flexibles et puissantes dans votre projet.
 
-Par exemple, un Layout commun pour les articles de blog peut afficher un titre, une date et un auteur. Un composant Layout `BlogPostLayout.astro` pourrait ajouter cette UI à la page et aussi utiliser un Layout plus général pour gérer le reste de votre page.
+Par exemple, une mise en page commune pour les articles de blog peut afficher un titre, une date et un auteur. Un composant de mise en page `BlogPostLayout.astro` pourrait ajouter cette UI à la page et aussi utiliser une mise en page plus générale pour gérer le reste de votre page.
 
 ```markdown title="src/pages/page.md" {2} 
 ---
