--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -77,7 +77,7 @@ title: "Hello, World!"
 author: "Matthew Phillips"
 date: "09 Aug 2022"
 ---
-Toutes les propriétés de frontmatter sont disponibles comme propriétés pour un composant de layout Astro.
+Toutes les propriétés de frontmatter sont disponibles comme propriétés pour un composant de mise en page Astro.
 
 La propriété `layout` est la seule propriété spéciale fournie par Astro.
 
