--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -84,7 +84,7 @@ La propriété `layout` est la seule propriété spéciale fournie par Astro.
 Vous pouvez l'utiliser dans les fichiers Markdown et MDX situés dans `src/pages/`.
 ```
 
-Un layout typique pour les pages Markdown ou MDX inclut :
+Une mise en page typique pour les pages Markdown ou MDX inclut :
 1. La propriété `frontmatter` pour accéder au frontmatter et aux autres données de la page Markdown ou MDX.
 2. Un [`<slot />`](/fr/core-concepts/astro-components/#les-emplacements-slots) par défaut pour indiquer où le contenu Markdown/MDX de la page doit être rendu.
 
