--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -109,7 +109,7 @@ const { frontmatter } = Astro.props;
 </html>
 ```
 
-### Propriétés de mise-en-page Markdown
+### Propriétés de mise en page Markdown
 
 Un layout Markdown/MDX aura accès aux informations suivantes via `Astro.props` :
 
