--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -122,7 +122,7 @@ Un layout Markdown/MDX aura accès aux informations suivantes via `Astro.props` 
 - **(Markdown only) `rawContent()`** - Une fonction qui renvoie le document Markdown brut sous forme de chaine de caractères.
 - **(Markdown only) `compiledContent()`** - Une fonction qui renvoie le document Markdown compilé en tant que chaine de caractères HTML.
 
-Un exemple de billet de blog en format Markdown peut transmettre l'objet `Astro.props` suivant à son layout :
+Un exemple de billet de blog en format Markdown peut transmettre l'objet `Astro.props` suivant à sa mise en page :
 
 ```js
 Astro.props = {
