--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -159,7 +159,7 @@ Astro.props = {
 ```
 
 :::note
-Un layout Markdown/MDX aura accès à toutes les [propriétés exportées de son fichier](/fr/guides/markdown-content/#exported-properties) depuis `Astro.props` **avec quelques différences essentielles :**
+Une mise en page Markdown/MDX aura accès à toutes les [propriétés exportées de son fichier](/fr/guides/markdown-content/#exported-properties) depuis `Astro.props` **avec quelques différences essentielles :**
 
 *   Informations sur l'en-tête (c.-à-d. les éléments `h1 -> h6`) sont disponibles via le tableau `headings`, plutôt qu'une fonction `getHeadings()`.
 
