--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -165,7 +165,7 @@ Une mise en page Markdown/MDX aura accès à toutes les [propriétés exportées
 
 *   `file` et `url` sont *aussi* disponibles comme propriétés `frontmatter` imbriquées (c.-à-d. `frontmatter.url` et `frontmatter.file`).
 
-*   Valeurs définies en dehors de frontmatter (par exemple la déclaration `export` en MDX) ne sont pas disponibles. Pensez à [importer un layout](#importation-manuelle-de-layout-mdx) à la place.
+*   Valeurs définies en dehors de frontmatter (par exemple la déclaration `export` en MDX) ne sont pas disponibles. Pensez à [importer une mise en page](#importation-manuelle-de-layout-mdx) à la place.
 :::
 
 ### Importation manuelle de Layouts (MDX)
