--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -168,7 +168,7 @@ Une mise en page Markdown/MDX aura accès à toutes les [propriétés exportées
 *   Valeurs définies en dehors de frontmatter (par exemple la déclaration `export` en MDX) ne sont pas disponibles. Pensez à [importer une mise en page](#importation-manuelle-de-layout-mdx) à la place.
 :::
 
-### Importation manuelle de Layouts (MDX)
+### Importation manuelle de mises en page (MDX)
 
 Vous pouvez avoir besoin de transmettre à votre layout MDX des informations qui n'existent pas (ou ne peuvent pas exister) dans votre frontmatter. Dans ce cas, vous pouvez à la place importer et utiliser un [composant `<Layout />`](/fr/core-concepts/layouts/) et lui passer des propriétés comme n'importe quel autre composant :
 
