--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -170,7 +170,7 @@ Une mise en page Markdown/MDX aura accès à toutes les [propriétés exportées
 
 ### Importation manuelle de mises en page (MDX)
 
-Vous pouvez avoir besoin de transmettre à votre layout MDX des informations qui n'existent pas (ou ne peuvent pas exister) dans votre frontmatter. Dans ce cas, vous pouvez à la place importer et utiliser un [composant `<Layout />`](/fr/core-concepts/layouts/) et lui passer des propriétés comme n'importe quel autre composant :
+Vous pouvez avoir besoin de transmettre à votre mise en page MDX des informations qui n'existent pas (ou ne peuvent pas exister) dans votre frontmatter. Dans ce cas, vous pouvez à la place importer et utiliser un [composant `<Layout />`](/fr/core-concepts/layouts/) et lui passer des propriétés comme n'importe quel autre composant :
 
 ```mdx title="src/pages/posts/first-post.mdx" ins={6} del={2} /</?BaseLayout>/ /</?BaseLayout title={frontmatter.title} fancyJsHelper={fancyJsHelper}>/
 ---
