--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -206,7 +206,7 @@ const { title, fancyJsHelper } = Astro.props;
 
 📚 Pour en savoir plus sur la prise en charge de Markdown et de MDX par Astro, consultez notre [guide Markdown/MDX](/fr/guides/markdown-content/).
 
-## Utilisation d'un layout unique pour les fichiers `.md`, `.mdx` et `.astro`.
+## Utilisation d'une mise en page unique pour les fichiers `.md`, `.mdx` et `.astro`.
 
 Un unique layout Astro peut être écrit pour recevoir l'objet `frontmatter` des fichiers `.md` et `.mdx`, ainsi que toutes les propriétés nommées, passées depuis les fichiers `.astro`.
 
