--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -210,7 +210,7 @@ const { title, fancyJsHelper } = Astro.props;
 
 Un unique layout Astro peut être écrit pour recevoir l'objet `frontmatter` des fichiers `.md` et `.mdx`, ainsi que toutes les propriétés nommées, passées depuis les fichiers `.astro`.
 
-Dans l'exemple ci-dessous, le layout va afficher le titre de la page, soit depuis un composant Astro en passant un attribut `title`, soit depuis la propriété YAML `title` de frontmatter :
+Dans l'exemple ci-dessous, la mise en page va afficher le titre de la page, soit depuis un composant Astro en passant un attribut `title`, soit depuis la propriété YAML `title` de frontmatter :
 
 ```astro /{?title}?/ /Astro.props[.a-z]*/
 ---
