Feat: updating 'layouts' page Franch translation

--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -8,15 +8,15 @@ description: >-
 
 Les **Layouts** (ou "mise-en-pages" en français) sont des [composants Astro](/fr/core-concepts/astro-components/) utilisés pour fournir une structure d'interface utilisateur réutilisable, comme un modèle de page.
 
-Par convention, nous utilisons le terme "mise en page" pour les composants Astro qui fournissent des éléments d'interface utilisateur commun à toutes les pages, tels que les en-têtes, les barres de navigation et les pieds de page. Un composant de layout typique d'Astro fournit [aux pages Astro, Markdown ou MDX](/fr/core-concept/astro-pages/) les éléments suivants :
+Par convention, nous utilisons le terme "mise en page" pour les composants Astro qui fournissent des éléments d'interface utilisateur commune à toutes les pages, tels que les en-têtes, les barres de navigation et les pieds de page. Un composant de mise en page typique d'Astro fournit [aux pages Astro, Markdown ou MDX](/fr/core-concepts/astro-pages/) les éléments suivants :
 - une **page shell** (`<html>`, `<head>` et `<body>` tags)
 - un [**`<slot />`**](/fr/core-concepts/astro-components/#les-emplacements-slots) pour spécifier où le contenu de chaque page doit être injecté.
 
-Mais, un composant de mise en page n'a rien de spécial ! Ils peuvent [accepter des propriétés](fr/core-concepts/astro-components/#propriétés-de-composants) et [importer et utiliser d'autres composants](/fr/core-concepts/astro-components/#vue-densemble-des-composants) comme n'importe quel autre composant Astro. Ils peuvent inclure [des composants de frameworks d'interface utilisateur](/fr/core-concepts/framework-components/) et [des scripts côté client](/fr/core-concepts/astro-components/#scripts-côté-client). Ils ne doivent même pas fournir une page shell complète, et peuvent plutôt être utilisés comme des modèles d'interface utilisateur partielle.
+Mais, un composant de mise en page n'a rien de spécial ! Ils peuvent [accepter des propriétés](/fr/core-concepts/astro-components/#propriétés-de-composants) et [importer et utiliser d'autres composants](/fr/core-concepts/astro-components/#structure-du-composant) comme n'importe quel autre composant Astro. Ils peuvent inclure [des composants de frameworks d'interface utilisateur](/fr/core-concepts/framework-components/) et [des scripts côté client](/fr/core-concepts/astro-components/#scripts-côté-client). Ils ne doivent même pas fournir une page shell complète, et peuvent plutôt être utilisés comme des modèles d'interface utilisateur partielle.
 
 Les composants de mise en pages sont généralement placés dans un dossier `src/layouts` dans votre projet pour l'organisation, mais ce n'est pas une obligation.
 
-## Exemple de Layout
+## Exemple de mise en page
 
 **`src/layouts/MySiteLayout.astro`**
 
@@ -58,13 +58,13 @@ import MySiteLayout from '../layouts/MySiteLayout.astro';
 
 📚 Apprenez-en plus sur [les Slots](/fr/core-concepts/astro-components/#les-emplacements-slots).
 
-## Mises en page Markdown/MDX
+## Mises en page Markdown/MDX
 
 Les mises en page sont particulièrement utiles pour [les pages Markdown et MDX](/fr/guides/markdown-content/#markdown-and-mdx-pages) qui, autrement, n'auraient pas de formatage de page.
 
 Astro fournit une propriété spéciale `layout` frontmatter pour spécifier le composant `.astro` à utiliser comme mise en page.
 
-## Inclure des Layouts
+## Inclure des mises en page
 
 Les composants de mise en page ne nécessitent pas de contenir une page HTML complète. Vous pouvez découper vos mises en page en composants plus petits, et ensuite réutiliser ces composants pour créer des mises en page plus flexibles et puissantes dans votre projet.
 
@@ -111,7 +111,7 @@ const { frontmatter } = Astro.props;
 
 ### Propriétés de mise en page Markdown
 
-Un layout Markdown/MDX aura accès aux informations suivantes via `Astro.props` :
+Une mise en page Markdown/MDX aura accès aux informations suivantes via `Astro.props` :
 
 - **`file`** - Le chemin absolu de ce fichier (exemple : `/home/user/projects/.../file.md`).
 - **`url`** - Si c'est une page, l'URL de cette page (exemple : `/fr/guides/markdown-content`).
@@ -165,7 +165,7 @@ Une mise en page Markdown/MDX aura accès à toutes les [propriétés exportées
 
 *   `file` et `url` sont *aussi* disponibles comme propriétés `frontmatter` imbriquées (c.-à-d. `frontmatter.url` et `frontmatter.file`).
 
-*   Valeurs définies en dehors de frontmatter (par exemple la déclaration `export` en MDX) ne sont pas disponibles. Pensez à [importer une mise en page](#importation-manuelle-de-layout-mdx) à la place.
+*   Valeurs définies en dehors de frontmatter (par exemple la déclaration `export` en MDX) ne sont pas disponibles. Pensez à [importer une mise en page](#importation-manuelle-de-mises-en-page-mdx) à la place.
 :::
 
 ### Importation manuelle de mises en page (MDX)
@@ -189,7 +189,7 @@ function fancyJsHelper() {
 </BaseLayout>
 ```
 
-Ensuite, vos valeurs sont disponibles à travers `Astro.props` dans votre layout,
+Ensuite, vos valeurs sont disponibles à travers `Astro.props` dans votre mise en page,
 et votre contenu MDX va être injecté dans la page où votre composant `<slot />` est écrit : 
 
 ```astro "fancyJsHelper" "title"
@@ -208,7 +208,7 @@ const { title, fancyJsHelper } = Astro.props;
 
 ## Utilisation d'une mise en page unique pour les fichiers `.md`, `.mdx` et `.astro`.
 
-Un unique layout Astro peut être écrit pour recevoir l'objet `frontmatter` des fichiers `.md` et `.mdx`, ainsi que toutes les propriétés nommées, passées depuis les fichiers `.astro`.
+Une unique mise en page Astro peut être écrite pour recevoir l'objet `frontmatter` des fichiers `.md` et `.mdx`, ainsi que toutes les propriétés nommées, passées depuis les fichiers `.astro`.
 
 Dans l'exemple ci-dessous, la mise en page va afficher le titre de la page, soit depuis un composant Astro en passant un attribut `title`, soit depuis la propriété YAML `title` de frontmatter :
 
@@ -228,7 +228,7 @@ const { title } = Astro.props.frontmatter || Astro.props;
 
 ## Mises en page d'emboîtement
 
-Les composants de mises en pages ne doivent pas nécessairement contenir une page entière de HTML. Vous pouvez décomposer vos layouts en composants plus petits et combiner des composants layout pour créer des templates de page encore plus flexibles. 
+Les composants de mises en pages ne doivent pas nécessairement contenir une page entière de HTML. Vous pouvez décomposer vos mises en page en composants plus petits et combiner des composants de mises en page pour créer des templates de page encore plus flexibles. 
 
 Par exemple, un composant de mise en page `BlogPostLayout.astro` peut styliser le titre, la date et l'auteur d'un article. Ensuite, un `BaseLayout.astro` pour tout le site pourrait gérer le reste de votre template de page, comme la navigation et les pieds de page. Vous pouvez également transmettre les propriétés reçues de votre message à une autre mise en page, comme tout autre composant imbriqué.
 
