i18n(ja): Update project-structure.mdx

--- a/src/pages/ja/core-concepts/project-structure.mdx
+++ b/src/pages/ja/core-concepts/project-structure.mdx
@@ -6,7 +6,7 @@ i18nReady: true
 ---
 import FileTree from '~/components/FileTree.astro'
 
-CLIウィザードの`create-astro`で生成した新しいAstroプロジェクトには、いくつかのファイルとフォルダが含まれています。その他は自分で作成し、Astroの既存のファイル構成に追加します。
+CLIウィザードの`create astro`で生成した新しいAstroプロジェクトには、いくつかのファイルとフォルダが含まれています。その他は自分で作成し、Astroの既存のファイル構成に追加します。
 
 ここでは、Astroプロジェクトがどのように構成されているか、また、新しいプロジェクトに含まれるいくつかのファイルについて説明します。
 
