--- a/src/pages/en/guides/deploy/vercel.mdx
+++ b/src/pages/en/guides/deploy/vercel.mdx
@@ -58,7 +58,7 @@ You can deploy to Vercel through the website UI or using Vercel’s CLI (command
 3. Vercel will automatically detect Astro and configure the right settings.
 4. Your application is deployed! (e.g. [astro.vercel.app](https://astro.vercel.app/))
 
-After your project has been imported and deployed, all subsequent pushes to branches will generate [Preview Deployments](https://vercel.com/docs/concepts/deployments/environments#preview), and all changes made to the Production Branch (commonly “main”) will result in a [Production Deployment](https://vercel.com/docs/concepts/deployments/environments#production).
+After your project has been imported and deployed, all subsequent pushes to branches will generate [Preview Deployments](https://vercel.com/docs/concepts/deployments/preview-deployments), and all changes made to the Production Branch (commonly “main”) will result in a [Production Deployment](https://vercel.com/docs/concepts/deployments/environments#production).
 
 📚 Learn more about Vercel’s [Git Integration](https://vercel.com/docs/concepts/git).
 
