Fix broken link

--- a/src/pages/ja/guides/deploy/vercel.mdx
+++ b/src/pages/ja/guides/deploy/vercel.mdx
@@ -17,7 +17,7 @@ Astroプロジェクトは、静的サイトまたはサーバーサイドレン
 
 Astroプロジェクトはデフォルトで静的サイトです。静的なAstroサイトをVercelにデプロイするために追加の設定は必要ありません。
 
-### SSRのためのアダプター
+### SSRアダプター
 
 AstroプロジェクトでSSRを有効にしてVercelにデプロイするには、以下の手順を実行します。
 
@@ -79,6 +79,6 @@ Vercelへのデプロイは、ウェブサイトのUIまたはVercelのCLI（コ
 
 ### vercel.jsonによるプロジェクト設定
 
-`vercel.json`を使用して、Vercelのデフォルトの動作を上書きしたり、追加の設定を行うことができます。たとえば、デプロイ環境からのHTTPレスポンスにヘッダーを添付する場合などがあります。
+`vercel.json`を使用して、Vercelのデフォルトの動作を上書きしたり、追加の設定を行うことができます。たとえば、デプロイ環境からのHTTPレスポンスにヘッダーを追加する場合などに使用します。
 
 📚 [Vercelのプロジェクト設定](https://vercel.com/docs/project-configuration)についてもっと学ぶ。
