--- a/src/pages/ja/guides/deploy/google-cloud.mdx
+++ b/src/pages/ja/guides/deploy/google-cloud.mdx
@@ -35,6 +35,6 @@ i18nReady: true
 
 4. `dist`フォルダをバケットにアップロードするか、[Cloud Build](https://cloud.google.com/build)を使用してアップロードします。
 
-5. `allUsers`に`Storage Object Viewer`という権限を追加することで、パブリックアクセスを有効にします。
+5. `allUsers`に`Storage Object Viewer`という権限を新たに追加することで、パブリックアクセスを有効にします。
 
 6. ウェブサイトの設定を編集し、エントリポイントとして`ìndex.html`を、エラーページとして`404.html`を追加します。
