--- a/src/pages/es/guides/imports.mdx
+++ b/src/pages/es/guides/imports.mdx
@@ -79,7 +79,7 @@ Si bien Astro entiende la sintaxis de JSX por defecto, deberás incluir una inte
 
 ## Paquetes NPM
 
-Si tu has instalado un paquete de NPM, puedes importarlo en Astro.
+Si has instalado un paquete de NPM, puedes importarlo en Astro.
 
 ```astro
 ---
