edits to prerendering, error overlay

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -12,71 +12,71 @@ This guide will help you migrate from Astro v1 to Astro v2.
 
 Need to upgrade an older project to v1? See our [older migration guide](https://github.com/withastro/docs/blob/aa7e4f568f418657eba297778729a8aee2a36409/src/pages/en/migrate.mdx).
 
-## Upgrade steps
+## Upgrade Astro
 
 1. You can check your version of Astro, and any official Astro integrations (`@astrojs/*`), in `package.json` at the root of your project. These may be in `devDependencies` and/or `dependencies`:
 
-  ```json "@astrojs/" {6}
-  "devDependencies": {
-    "@astrojs/react": "^1.2.2",
-    "@astrojs/svelte": "^1.0.2",
-    "@astropub/icons": "^0.1.1",
-    "accessible-astro-components": "^1.4.5",
-    "astro": "2.0.0-beta.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.0.0",
-    "svelte": "^3.47.0"
-  },
-  "dependencies": {
-    "@astrojs/image": "0.13.0-beta.0",
-    "@astrojs/rss": "^2.0.0",
-    "@astrojs/vue": "^1.2.1",
-    "vue": "^3.2.41"
-  }
-  ```
+    ```json "@astrojs/" {6}
+    "devDependencies": {
+      "@astrojs/react": "^1.2.2",
+      "@astrojs/svelte": "^1.0.2",
+      "@astropub/icons": "^0.1.1",
+      "accessible-astro-components": "^1.4.5",
+      "astro": "2.0.0-beta.0",
+      "react": "^18.2.0",
+      "react-dom": "^18.0.0",
+      "svelte": "^3.47.0"
+    },
+    "dependencies": {
+      "@astrojs/image": "0.13.0-beta.0",
+      "@astrojs/rss": "^2.0.0",
+      "@astrojs/vue": "^1.2.1",
+      "vue": "^3.2.41"
+    }
+    ```
 
 2. Update your project's version of Astro to the latest version using your package manager. If you're using Astro integrations, please also update those to the latest version.
 
-  <PackageManagerTabs>
-    <Fragment slot="npm">
-    ```shell
-    # upgrades to Astro v2.x:
-    npm i astro@latest
-    # to update all dependencies:
-    npm upgrade
-    ```
-    </Fragment>
-    <Fragment slot="pnpm">
-    ```shell
-    # upgrades to Astro v2.x:
-    pnpm i astro@latest
-    # to update all dependencies:
-    pnpm upgrade
-    ```
-    </Fragment>
-    <Fragment slot="yarn">
-    ```shell
-    # upgrades to Astro v2.x:
-    yarn add astro@latest
-    # to update all dependencies:
-    yarn upgrade
-    ```
-    </Fragment>
-  </PackageManagerTabs>
+    <PackageManagerTabs>
+      <Fragment slot="npm">
+      ```shell
+      # upgrades to Astro v2.x:
+      npm i astro@latest
+      # to update all dependencies:
+      npm upgrade
+      ```
+      </Fragment>
+      <Fragment slot="pnpm">
+      ```shell
+      # upgrades to Astro v2.x:
+      pnpm i astro@latest
+      # to update all dependencies:
+      pnpm upgrade
+      ```
+      </Fragment>
+      <Fragment slot="yarn">
+      ```shell
+      # upgrades to Astro v2.x:
+      yarn add astro@latest
+      # to update all dependencies:
+      yarn upgrade
+      ```
+      </Fragment>
+    </PackageManagerTabs>
 
-3. Check that you are running **at least Node `16.12.0`**. In v2.0, Astro dropped support for Node `14`:
+3. Check that you are running **at least Node `16.12.0`**. In v2.0, Astro dropped support for Node `14`.
 
-  ```sh
-  node -v
-  ```
-  
-  If necessary, follow the instructions to [install Node.js](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm) via the command line. You may also need to verify that your [deployment environment](/en/guides/deploy/) meets this new minimum standard. You may wish to create a `.nmvrc` file to specify this version.
+    ```sh
+    node -v
+    ```
+    
+    If necessary, [update your version of Node](en/upgrade-astro/#updated-node-version-16120) in your local and deployment environments.
 
 ## Do I need to update my code?
 
 Many projects will not need any changes to the codebase! Your upgrade may now be complete.  
 
-But, this upgrade does bring:
+But, this upgrade does bring some big, potentially breaking changes:
 
 - **Vite 4**
 
@@ -84,7 +84,7 @@ But, this upgrade does bring:
 
 - **the complete removal of several previously-deprecated items**
 
-  Using one of the [deprecated options mentioned below](#astro-20-breaking-changes)? That's got to go!
+  Still using one of the [deprecated options mentioned below](#astro-20-breaking-changes)? That's got to go!
 
 - **a new, unified location for your built assets**
 
@@ -94,7 +94,7 @@ But, this upgrade does bring:
 
   Using plugins in [Markdown](#changed-markdown-plugin-configuration) and [MDX](#changed-mdx-plugin-configuration)? Convert your config!
 
-- **a new, reserved folder `src/content/` for our new Collections API**
+- **a new, reserved folder `src/content/` for the new Collections API**
 
   If you [have your own folder called `src/content/`](#added-srccontent), we'd like a word with you!
 
@@ -102,14 +102,18 @@ But, this upgrade does bring:
 
   You [don't need these flags](#astro-20-experimental-flags-removed) to get the goodies. Open to everyone now!
 
-So if your project doesn't work as expected after upgrading to v2.0, then check this guide for major highlights and instructions on how to handle breaking changes when upgrading from v1.x and v2.0-beta releases. See [the changelog](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md) for full release notes.
+So, [you might see Houston](#error-overlay) a few times before you're done! 
+
+If your project doesn't work as expected after upgrading to v2.0, then check this guide for major highlights and instructions on how to handle breaking changes when upgrading from v1.x and v2.0-beta releases. 
+
+See [the changelog](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md) for full release notes.
 
 
 ## Astro 2.0 Updates
 
 ### Updated: Node Version >=16.12.0
 
-The minimum supported version of NodeJS is now 16.12.0.
+The minimum supported version of Node.js is now `16.12.0`.
 
 #### What should I do?
 
@@ -121,12 +125,12 @@ Both your development environment and your deployment environment must now meet 
     node -v
  
     ```
-    If your local development environment needs upgrading to Node 16, [install Node.js](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm) via the command line.
+    If your local development environment needs upgrading to Node 16, [install Node.js](https://nodejs.org/en/download/).
 
 
 2. Check your [deployment environment's](/en/guides/deploy/) own documentation to verify that they support Node 16. 
 
-    You may be able to specify Node 16.12.0 for your Astro project either in a dashboard, or a `.nvmrc` file.
+    You can specify Node 16.12.0 for your Astro project either in a dashboard configuration setting, or a `.nvmrc` file.
 
 
 ### Updated: Vite 4
@@ -135,7 +139,7 @@ Astro v2.0 upgrades from Vite 3 to [Vite 4](https://vitejs.dev/).
 
 #### What should I do?
 
-There should be no changes to your code necessary! Enjoy [many internal improvements under-the-hood](https://vitejs.dev/blog/announcing-vite4.html) without changing a thing.
+There should be no changes to your code necessary! Enjoy [many internal improvements under the hood](https://vitejs.dev/blog/announcing-vite4.html), without changing a thing.
 
 We've handled most of the upgrade for you inside of Astro; however, some subtle Vite behaviors may still change between versions. 
 
@@ -165,7 +169,7 @@ export default defineConfig({
 
 If you were using this feature in 1.x, we recommend [using the MDX integration](/en/guides/integrations-guide/mdx/) which allows you to include components and JSX expressions in your Markdown.
 
-See our older upgrade guide for more about [converting existing Mardown files to MDX](https://github.com/withastro/docs/blob/aa7e4f568f418657eba297778729a8aee2a36409/src/pages/en/migrate.mdx#converting-existing-md-files-to-mdx).
+See our older upgrade guide for more about [converting existing Markdown files to MDX](https://github.com/withastro/docs/blob/aa7e4f568f418657eba297778729a8aee2a36409/src/pages/en/migrate.mdx#converting-existing-md-files-to-mdx).
 
 ### Removed: `Astro.resolve()`
 
@@ -196,7 +200,7 @@ Astro 2.0 removes this option entirely. `Astro.fetchContent()` in your code will
 
 #### What should I do?
 
-Use [`Astro.glob()`](/en/guides/imports/#astroglob) to fetch Markdown files, or migrate to the [Content Collections](/en/guides/content-collections/) feature.
+Use [`Astro.glob()`](/en/guides/imports/#astroglob) to fetch Markdown files, or convert to the [Content Collections](/en/guides/content-collections/) feature.
 
 ```js
 let allPosts = await Astro.glob('./posts/*.md');
@@ -219,7 +223,9 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
 ### Added: `_astro/` folder for build assets
 
-Astro 2.0 moves the location of all build output assets to a new `_astro/` folder. Previously, these assets were built to various locations, including `assets/`, `chunks/` and the root of the build output. 
+In 1.0, assets were built to various locations, including `assets/`, `chunks/` and the root of the build output.
+
+Astro 2.0 moves and unifies the location of all build output assets to a new `_astro/` folder. 
 
 <FileTree>
 - dist/
@@ -232,18 +238,18 @@ You can control this location with the [new `build.assets` configuration option]
 
 #### What should I do?
 
-If your deployment relies on the location of these assets, you may need to update your caching configuration with your deployment platform.
+If your deployment relies on the location of these assets, you may need to update your configuration with your deployment platform.
 
 
 ### Changed: Markdown plugin configuration
 
 #### Removed: `extendDefaultPlugins`
 
-Astro 2.0 removes `markdown.extendDefaultPlugins` for controlling Astro's default plugin behavior. 
+Astro 2.0 removes `markdown.extendDefaultPlugins` for controlling Astro's default plugin behavior when adding your own plugins. 
 
-Applying remark and rehype plugins in your Markdown configuration  **no longer disables** Astro's default plugins, so this option is no longer needed.
+Applying remark and rehype plugins in your Markdown configuration  **no longer disables Astro's default plugins**, so this option is no longer needed.
 
-GitHub-Flavored Markdown and Smartypants are now applied whether or not custom `remarkPlugins` or `rehypePlugins` are configured. (You can opt-out manually by setting [`gfm` and `smartypants`](#added-gfm-and-smartypants) to `false` in your config.)
+GitHub-Flavored Markdown and Smartypants are now applied whether or not custom `remarkPlugins` or `rehypePlugins` are configured. (You can opt out manually by setting the [new `gfm` and `smartypants` options](#added-gfm-and-smartypants) to `false` in your config.)
 
 
 ##### What should I do?
@@ -289,13 +295,13 @@ export default defineConfig({
 
 #### Replaced: `extendPlugins` -> `extendMarkdownConfig`
 
-Astro 2.0 removes the `mdx.extendPlugins` option to manage inheriting Markdown plugin defaults in MDX. Previously, this configuration setting was used to indicate which Markdown plugins, all or just Astro's defaults, should be applied to MDX. 
+In 1.0, `.mdx.extendPlugins` managed how your MDX files should inherit your Markdown plugin configuration. This setting was used to indicate whether all Markdown plugins (`markdown`), or only Astro's default plugins (`defaults`) should be applied to MDX.
 
-This behavior is now configurable with three new options:
+Astro 2.0 replaces `mdx.extendPlugins` with three new, independently-configurable options:
 
-- [`mdx.extendMarkdownConfig`](/en/guides/integrations-guide/mdx/#extendmarkdownconfig) (`true` by default) to toggle Markdown config inheritance.
-- `mdx.gfm` (`true` by default) to toggle GitHub-Flavored Markdown in MDX.
-- `mdx.smartypants` (`true` by default) to toggle SmartyPants in MDX.
+- **[`mdx.extendMarkdownConfig`](/en/guides/integrations-guide/mdx/#extendmarkdownconfig)** (`true` by default) to inherit all of your Markdown configuration or none of it.
+- **`mdx.gfm`** (`true` by default) to enable or disable GitHub-Flavored Markdown in MDX.
+- **`mdx.smartypants`** (`true` by default) to enable or disable SmartyPants in MDX.
 
  ##### What should I do?
 
@@ -312,7 +318,7 @@ export default defineConfig({
 });
 ```
 
-Replace `extendPlugins: 'defaults'` with `extendMarkdownConfig: false` if you do not wish to inherit any of your Markdown plugins in MDX. You can use the [individual options for GitHub-Flavored Markdown and SmartyPants](/en/guides/integrations-guide/mdx/#options-inherited-from-markdown-config) to reenable only Astro's default plugins.
+If your MDX is currently configured to inherit only Astro's default plugins, replace `extendPlugins: 'defaults'` with `extendMarkdownConfig: false` to disable all inheritance. Use the [separate options for GitHub-Flavored Markdown and SmartyPants](/en/guides/integrations-guide/mdx/#options-inherited-from-markdown-config) to enable these default plugins individually in MDX.
 
 ```diff
 // astro.config.mjs
@@ -369,6 +375,8 @@ Revisit your Markdown and MDX configuration and compare your existing config wit
 
 ### Added: Plugin access to frontmatter
 
+In 1.0, remark and rehype plugins did not have access to user frontmatter. Astro merged plugin frontmatter with your file's frontmatter, without passing the file frontmatter to your plugins.
+
 Astro 2.0 gives remark and rehype plugins access to user frontmatter via frontmatter injection. This allows plugin authors to modify a user's existing frontmatter, or compute new properties based on other properties.
 
 
@@ -376,7 +384,7 @@ Astro 2.0 gives remark and rehype plugins access to user frontmatter via frontma
 
 If you have written remark or rehype plugins for Astro, note that `data.astro.frontmatter` is now the _complete_ Markdown or MDX document's frontmatter, rather than an empty object. You may need to update your plugin accordingly.
  
-And, with access to a file's frontmatter, you can now write plugins that use this data! For example, to compute a full image URL based on an `imageSrc` slug in your document frontmatter:
+With access to a file's frontmatter, you can now write plugins that use this data! For example, to compute a full image URL based on an `imageSrc` slug in your document frontmatter:
 
   ```ts
   export function remarkInjectSocialImagePlugin() {
@@ -389,7 +397,9 @@ And, with access to a file's frontmatter, you can now write plugins that use thi
 
 ### Added: `src/content/`
 
-In 2.0, the [Collections API is no longer hidden behind an experimental flag](#content-collections). This API reserves `src/content/` as a special folder.
+In 1.0, the [Collections API was hidden behind an experimental flag](#content-collections). This API reserves `src/content/` as a special folder.
+
+Astro 2.0 now includes the Collections API in the core codebase for organizing your Markdown and MDX files into [content collections](/en/guides/content-collections/).
 
 #### What should I do?
 
@@ -397,7 +407,9 @@ If you have an existing `src/content/` folder, it must be renamed to avoid confl
 
 ## Astro 2.0 Experimental Flags Removed
 
-Remove the following experimental flags from `astro.config.mjs`:
+Astro v2.0 brings some exciting new features from previous experimental flags into the core codebase!
+
+You can remove the following experimental flags from `astro.config.mjs`:
 
 ```diff
 import { defineConfig } from 'astro/config';
@@ -408,7 +420,16 @@ export default defineConfig({
 - experimental: { error-overlay: true },
 })
 ```
-In Astro v2.0, these features are no longer hidden behind an experimental flag and are all enabled by default.
+The following features are no longer hidden behind an experimental flag and are all enabled by default.
+
+#### What should I do?
+
+While these do not require a change to your codebase, you may now wish to enjoy:
+- [Content collections](/en/guides/content-collections/) as a way to manage your Markdown and MDX files with type-safety.
+- [Prerendering individul pages to static HTML](/en/guides/server-side-rendering/#prerendering) when using SSR to improve speed and cacheability.
+- [Error Overlay](#error-overlay) improvements, with a complete redesign to help you understand and fix your errors.
+
+
 
 ### Content Collections
 
@@ -420,13 +441,41 @@ TODO - Guide for converting to Content Collections, ideally!
 
 ### Prerendering
 
-The experimental flag `--experimental-prerender` has been removed. The `prerender` feature is now enabled by default when using [`output:'server'`](/en/reference/configuration-reference/#output). 
+The experimental flag `--experimental-prerender` has been removed. [The `prerender` feature](/en/guides/server-side-rendering/#prerendering) is now enabled by default when using [`output:'server'`](/en/reference/configuration-reference/#output). 
 
-To prerender a particular page, add `export const prerender = true` to your frontmatter.
+In 1.0, one of the most requested features was to enable route-level control of output so that some routes can be server-rendered while others are statically-generated.
+
+Astro 2.0 enables per route, opt-in prerendering when using `output: 'server'`. 
+
+Add `export const prerender = true` to any file in `src/pages/` that should be rendered at build time rather than request time.
+
+```astro title="src/pages/index.astro" {3}
+---
+// This route should be generated at build time!
+export const prerender = true;
+
+const text = await fetch('https://example.com/').then(res => res.text())
+---
+
+<Fragment set:html={text} />
+```
 
 ### Error overlay
 
-The experimental flag `--experimental-error-overlay` has been removed. The error overlay during `astro dev` has a refreshed visual design and provides more context for your errors.
+The experimental flag `--experimental-error-overlay` has been removed.
+
+We hope you don't encounter too many errors when you build with Astro!
+
+But when you do, we hope that enjoy our new error overlay to give you more helpful, and easy-to-read messages. You can now expect:
+
+- A concise, descriptive error message identifying the problem.
+- A hint with more information, including tips for finding or resolving the issue.
+- A link to the error's page in docs. (There's one for every known Astro error!)
+- A full, syntax-colored code window when showing the location of your error.
+- Support for dark and light mode.
+- Houston in the corner!
+
+<img src="https://user-images.githubusercontent.com/3019731/204646476-f6b27533-539e-4dfd-8f73-453a9159573e.png" alt="Screenshot of a color-coded and human-readable error message showing exactly where in your code an error occurred, with helpful tips for resoving the issue."/>
 
 
 ## Known Issues
